--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose --forceExit --detectOpenHandles --passWithNoTests",
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
@@ -19,5 +19,8 @@
     "mongodb": "^3.6.7",
     "mongoose": "^5.12.10",
     "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6"
   }
 }
