--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,7 +5,7 @@ name: Node NoSQL API v2
 on:
   push:
     branches:
-      - master
+      - main
 
 # Las tareas que va a ejecutar el flujo de CI
 jobs:
